welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:3: error: type mismatch;
 found   : Unit
 required: Int
	for (i<-nums)
              ^